# supergod

./: pyproject.toml
polyedge/: .env.example  pyproject.toml  run_scheduler.py
polyedge/correlation/: add_advanced_features.py  fetch_fred_only.py  test_fred.py
polyedge/deploy/: deploy_256gb.ps1  polyedge-api.service  polyedge.service  setup.sh
polyedge/deploy/migrations/: 001_v3_tables.sql  004_backtest_tables.sql  004_category_and_trade_source.sql  004_trading_rule_tier.sql  005_trade_integrity_and_perf.sql  006_rename_llm_to_factor_match.sql
polyedge/docs/: polyedge-system-brief.md
polyedge/docs/plans/: 2026-03-07-adaptive-trading-system.md  category-rules-and-llm-paper-trading-plan.md
polyedge/scripts/: audit_dashboard_state.py  audit_rule_quality.py  audit_stale_markets.py  classify_rule_tiers.py  reconcile_stale_markets.py
polyedge/src/polyedge/: app.py  cli.py  db.py  models.py  poller.py  query_filters.py  scheduler.py
polyedge/src/polyedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polyedge/src/polyedge/analysis/: agreement_calculator.py  backtest_runner.py  generate.py  market_classifier.py  predictor.py  research_rule_bridge.py  scorer.py
polyedge/src/polyedge/data/: base_connector.py  (+2 more)
polyedge/tests/: test_analysis.py  test_app.py  test_connectors.py  test_dashboard_static.py  test_db.py  test_generate.py  test_grok_predictor.py  test_models.py  test_pnl.py  test_poller.py  test_price_fetcher.py  test_query_filters.py  test_research.py  test_scheduler.py  test_scheduler_remediation.py  test_scorer.py  test_supergod_dispatch.py  test_tier1_connectors.py
(+112 files in other folders)
