[project]
name = "polyedge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "numpy>=2.0",
    "click>=8.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "websockets>=14.0",
    "requests>=2.31",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25"]

[project.scripts]
polyedge = "polyedge.cli:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
